# triplet_match

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TripletMatchConfig.cmake  TripletMatchLibraryConfig.cmake  config.hpp.in
apps/: demo.cpp  triplet_match.cpp
cmake/modules/: FindOPTIX.cmake
include/: cartesian_tuple  common  cylinder  cylinder.ipp  cylinder_traits  discretize  feature  gpu_program  gpu_program.ipp  identity_traits  model  octree  octree.ipp  plane2_traits  plane_traits  pointcloud  progress_bar  range  raycaster  raycaster.ipp  scene  scene.ipp  stratified_search  triplet_feature
include/impl/: cylinder_traits.hpp  debug.hpp  discretize.hpp  feature.hpp  identity_traits.hpp  model.hpp  octree.hpp  plane2_traits.hpp  plane_traits.hpp  pointcloud.hpp  range.hpp  scene.hpp  stratified_search.hpp  timer.hpp  triplet_feature.hpp
opencl/: cylinder.cl  icp.cl  util.cl
optix/: RayCaster.cu
src/: common.cpp  cylinder_traits.cpp  discretize.cpp  feature.cpp  gpu_program.cpp  identity_traits.cpp  model.cpp  octree.cpp  pcl_point_types.def  plane2_traits.cpp  plane_traits.cpp  pointcloud.cpp  points_projectors_cartesian.def  progress_bar.cpp  scene.cpp  stratified_search.cpp
